Added additional objects letsss goooo

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -9,23 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 755,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/robotic/rai-robotModels/environment.g\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 512,
+     "execution_count": 755,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,12 +33,12 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "\n",
+    "# some important constants\n",
+    "numOfObjects = 4\n",
     "pclColor = [0,0,255]\n",
-    "max_trials = 10\n",
-    "max_vel = 100\n",
-    "max_acc = max_vel\n",
     "botOpSpeed = 1\n",
-    "\n",
+    "voxelSize = 0.006\n",
+    "degToleration = 6\n",
     "\n",
     "C = ry.Config()\n",
     "C.addFile('/home/vboxuser/Desktop/CS449/Migi/hw3/GFiles-HW3/environment.g')\n",
@@ -55,24 +48,76 @@
     "qHome = C.getJointState()\n",
     "# print(qHome)\n",
     "# C.view()\n",
-    "print(ry.raiPath('environment.g'))\n",
+    "# print(ry.raiPath('environment.g'))\n",
     "C.view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 756,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 756,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add a ball\n",
+    "\n",
+    "ballPos = C.getFrame(\"bin\").getPosition()\n",
+    "ballPos[1] = ballPos[1] + 0.2\n",
+    "ballPos[2] = ballPos[2] + 0.075\n",
+    "\n",
+    "ball = C.addFrame(\"ball\")\n",
+    "ball.setShape(ry.ST.sphere, [.03])\n",
+    "ball.setPosition(ballPos)\n",
+    "ball.setMass(0.1)\n",
+    "ball.setContact(1)\n",
+    "\n",
+    "C.view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 757,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
+      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
+      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+     ]
+    }
+   ],
    "source": [
     "bot = ry.BotOp(C, useRealRobot=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 758,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
+      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
+      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "  del bot\n",
@@ -97,18 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 759,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
-      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
-      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -145,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 760,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 761,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,23 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 762,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "37"
+       "0"
       ]
      },
-     "execution_count": 519,
+     "execution_count": 762,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,14 +294,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "voxelSize = 0.006\n",
-    "numOfObjects = 3\n",
-    "degToleration = 6"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -283,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 763,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 764,
    "metadata": {},
    "outputs": [
     {
@@ -341,10 +366,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 ... 0 1 2]\n",
+      "[2 2 2 ... 1 3 3]\n",
       "Cluster 0 has 1517 points\n",
-      "Cluster 1 has 765 points\n",
-      "Cluster 2 has 368 points\n",
+      "Cluster 1 has 368 points\n",
+      "Cluster 2 has 360 points\n",
+      "Cluster 3 has 765 points\n",
       "Normals are already estimated.\n",
       "Normal magnitudes (first 10): [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
       "Are normals normalized?  True\n"
@@ -400,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 765,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +438,8 @@
       "Fixing normals for Cluster 2...\n",
       "Reorienting normals...\n",
       "Fixing normals for Cluster 3...\n",
+      "Reorienting normals...\n",
+      "Fixing normals for Cluster 4...\n",
       "Reorienting normals...\n"
      ]
     }
@@ -443,21 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 766,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "37"
+       "0"
       ]
      },
-     "execution_count": 524,
+     "execution_count": 766,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "centre = [None] * numOfObjects\n",
     "\n",
     "for i, cluster in enumerate(clusters):\n",
@@ -492,6 +521,10 @@
     "soapBox.setPointCloud(clusters[2].points, [255, 255, 0])\n",
     "soapBox.setPosition(centre[2])\n",
     "\n",
+    "ballAdditional = C.addFrame(\"pcl_ballAdditional\")\n",
+    "ballAdditional.setPointCloud(clusters[3].points, [255, 255, 0])\n",
+    "ballAdditional.setPosition(centre[3])\n",
+    "\n",
     "# C.addFrame(\"vis_soap\", \"pcl_soapBox\").setShape(ry.ST.marker, [1]).setPosition(soapBox.getPosition())\n",
     "C.view()"
    ]
@@ -505,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 767,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 768,
    "metadata": {},
    "outputs": [
     {
@@ -616,17 +649,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of potential grasp pairs in Cluster 1: 3\n",
+      "Number of potential grasp pairs in Cluster 1: 4\n",
       "Filtered grasp pairs for Cluster 1: 189\n",
       "Processing Cluster 2...\n",
-      "Number of potential grasp pairs in Cluster 2: 3\n",
-      "Filtered grasp pairs for Cluster 2: 90\n",
+      "Number of potential grasp pairs in Cluster 2: 4\n",
+      "Filtered grasp pairs for Cluster 2: 53\n",
       "Processing Cluster 3...\n",
-      "Number of potential grasp pairs in Cluster 3: 3\n",
-      "Filtered grasp pairs for Cluster 3: 53\n",
-      "Best grasp pair for Cluster 1: (228, 1138) with distance closest to average 0.07315048466477161\n",
-      "Best grasp pair for Cluster 2: (210, 648) with distance closest to average 0.04801003655110249\n",
-      "Best grasp pair for Cluster 3: (151, 298) with distance closest to average 0.04188608402982609\n"
+      "Number of potential grasp pairs in Cluster 3: 4\n",
+      "Filtered grasp pairs for Cluster 3: 5\n",
+      "Processing Cluster 4...\n",
+      "Number of potential grasp pairs in Cluster 4: 4\n",
+      "Filtered grasp pairs for Cluster 4: 90\n",
+      "Best grasp pair for Cluster 1: (497, 1242) with distance closest to average 0.07315048466477161\n",
+      "Best grasp pair for Cluster 2: (125, 320) with distance closest to average 0.04188608402982608\n",
+      "Best grasp pair for Cluster 3: (60, 199) with distance closest to average 0.05902500893780619\n",
+      "Best grasp pair for Cluster 4: (436, 619) with distance closest to average 0.0480100365511025\n"
      ]
     }
    ],
@@ -696,16 +733,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 769,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "37"
+       "0"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 769,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 770,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,16 +800,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 771,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.000841, evals: 16, done: 1, feasible: 1, sos: 0.0405021, f: 0, ineq: 0, eq: 0.00369577 }\n",
-      "{ time: 0.001122, evals: 17, done: 1, feasible: 1, sos: 0.0253933, f: 0, ineq: 0, eq: 0.000824735 }\n",
-      "{ time: 0.000963, evals: 18, done: 1, feasible: 1, sos: 0.0296462, f: 0, ineq: 0, eq: 0.00133229 }\n"
+      "{ time: 0.007943, evals: 18, done: 1, feasible: 1, sos: 0.040686, f: 0, ineq: 0, eq: 0.00150844 }\n",
+      "{ time: 0.00118, evals: 18, done: 1, feasible: 1, sos: 0.0302137, f: 0, ineq: 0, eq: 0.00121409 }\n",
+      "{ time: 0.00367, evals: 44, done: 1, feasible: 1, sos: 0.0614667, f: 0, ineq: 0, eq: 0.000284192 }\n",
+      "{ time: 0.001019, evals: 17, done: 1, feasible: 1, sos: 0.0252178, f: 0, ineq: 0, eq: 0.000841482 }\n"
      ]
     },
     {
@@ -781,7 +819,7 @@
        "0"
       ]
      },
-     "execution_count": 529,
+     "execution_count": 771,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +894,7 @@
     "  # Retrieve the optimized path\n",
     "  path = komo.getPath()[0]\n",
     "\n",
-    "  bot.moveTo(path, timeCost=2)\n",
+    "  bot.moveTo(path, timeCost=1)\n",
     "\n",
     "  while bot.getTimeToEnd()>0:\n",
     "      bot.sync(C, .1)\n",
@@ -972,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 772,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 773,
    "metadata": {},
    "outputs": [],
    "source": [
