HW3 FINISHED etssss go

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "0"
       ]
      },
-     "execution_count": 755,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,27 +34,35 @@
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "\n",
     "# some important constants\n",
+    "i_just_want_to_see_the_BotOp_simulation = True\n",
+    "\n",
+    "want_to_see_uncropped_point_cloud = False\n",
+    "want_to_see_cropped_point_cloud = not want_to_see_uncropped_point_cloud\n",
+    "want_to_see_normals_of_objects = True\n",
+    "want_to_see_separated_clusters = True\n",
+    "want_to_see_best_grasp_for_each_object = True\n",
+    "  \n",
+    "  \n",
     "numOfObjects = 4\n",
     "pclColor = [0,0,255]\n",
     "botOpSpeed = 1\n",
     "voxelSize = 0.006\n",
     "degToleration = 6\n",
     "\n",
+    "if i_just_want_to_see_the_BotOp_simulation:\n",
+    "  want_to_see_uncropped_point_cloud, want_to_see_cropped_point_cloud, want_to_see_normals_of_objects, want_to_see_separated_clusters, want_to_see_best_grasp_for_each_object = False, False, False, False, False\n",
+    "\n",
+    "\n",
     "C = ry.Config()\n",
     "C.addFile('/home/vboxuser/Desktop/CS449/Migi/hw3/GFiles-HW3/environment.g')\n",
     "\n",
-    "# C.addFile('./environment.g')\n",
-    "# C.addFile(ry.raiPath('environment.g'))\n",
     "qHome = C.getJointState()\n",
-    "# print(qHome)\n",
-    "# C.view()\n",
-    "# print(ry.raiPath('environment.g'))\n",
     "C.view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +71,13 @@
        "0"
       ]
      },
-     "execution_count": 756,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Add a ball\n",
+    "# Additional object: a ball\n",
     "\n",
     "ballPos = C.getFrame(\"bin\").getPosition()\n",
     "ballPos[1] = ballPos[1] + 0.2\n",
@@ -86,26 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
-      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
-      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bot = ry.BotOp(C, useRealRobot=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 759,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,13 +201,16 @@
     "      pcl[i][h, w] = transformed_point      \n",
     "      \n",
     "\n",
-    "# # Visualize the point cloud\n",
-    "# pclFrames = [None] * numOfCameras\n",
+    "# Visualize the point cloud\n",
+    "if want_to_see_uncropped_point_cloud:\n",
+    "  pclFrames = [None] * numOfCameras\n",
     "\n",
-    "# for i in range(numOfCameras):\n",
-    "#   pclFrames[i] = C.addFrame('pcl'+str(i+1), 'world')\n",
-    "#   pclFrames[i].setPointCloud(pcl[i], pclColor)\n",
-    "# C.view()"
+    "  for i in range(numOfCameras):\n",
+    "    pclFrames[i] = C.addFrame('pcl'+str(i+1), 'world')\n",
+    "    pclFrames[i].setPointCloud(pcl[i], pclColor)\n",
+    "\n",
+    "  C.view()\n",
+    "  pclFrames = None"
    ]
   },
   {
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,26 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 762,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pclCombined = np.concatenate(pcl, axis=0)\n",
-    "pclFrame = C.addFrame('pcl', 'world')\n",
-    "pclFrame.setPointCloud(pclCombined, pclColor)\n",
     "\n",
-    "C.view()"
+    "if want_to_see_cropped_point_cloud:\n",
+    "  pclCombined = np.concatenate(pcl, axis=0)\n",
+    "  pclFrame = C.addFrame('pcl', 'world')\n",
+    "  pclFrame.setPointCloud(pclCombined, pclColor)\n",
+    "\n",
+    "  C.view()"
    ]
   },
   {
@@ -293,13 +285,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -308,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +320,6 @@
     "print(\"Downsample the point cloud with a voxel of 0.05\")\n",
     "downpcd = pcd.voxel_down_sample(voxel_size=voxelSize)\n",
     "downpcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.1, max_nn=30))\n",
-    "# o3d.visualization.draw_geometries([downpcd])\n",
     "\n",
     "# # print list of normals\n",
     "# normals = np.asarray(downpcd.normals)\n",
@@ -351,17 +335,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  super()._check_params_vs_input(X, default_n_init=10)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -374,6 +350,14 @@
       "Normals are already estimated.\n",
       "Normal magnitudes (first 10): [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
       "Are normals normalized?  True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=10)\n"
      ]
     }
    ],
@@ -417,16 +401,12 @@
     "normals = np.asarray(downpcd.normals)\n",
     "magnitudes = np.linalg.norm(normals, axis=1)\n",
     "print(\"Normal magnitudes (first 10):\", magnitudes[:10])\n",
-    "print(\"Are normals normalized? \", np.allclose(magnitudes, 1.0, atol=1e-6))\n",
-    "\n",
-    "# # Visualize point cloud with normals\n",
-    "# print(\"Visualizing the point cloud with normals...\")\n",
-    "# o3d.visualization.draw_geometries([downpcd], point_show_normal=True)"
+    "print(\"Are normals normalized? \", np.allclose(magnitudes, 1.0, atol=1e-6))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -456,10 +436,11 @@
     "    print(f\"Fixing normals for Cluster {i+1}...\")\n",
     "    reorient_normals(cluster)\n",
     "\n",
-    "# # Visualize the corrected normals\n",
-    "# for i, cluster in enumerate(clusters):\n",
-    "#     print(f\"Visualizing corrected normals for Cluster {i+1}...\")\n",
-    "#     o3d.visualization.draw_geometries([cluster], point_show_normal=True)\n"
+    "if want_to_see_normals_of_objects:\n",
+    "    # Visualize the corrected normals\n",
+    "    for i, cluster in enumerate(clusters):\n",
+    "        print(f\"Visualizing corrected normals for Cluster {i+1}...\")\n",
+    "        o3d.visualization.draw_geometries([cluster], point_show_normal=True)\n"
    ]
   },
   {
@@ -471,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +461,7 @@
        "0"
       ]
      },
-     "execution_count": 766,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,30 +481,24 @@
     "    point[0] = point[0] - centre[i][0]\n",
     "    point[1] = point[1] - centre[i][1]\n",
     "    point[2] = point[2] - centre[i][2]\n",
-    "  \n",
-    "# centre[0] = centre[0] + [0.175, -0.32, -0.7425]\n",
-    "# centre[1] = centre[1] + [-0.2, -0.4, -0.7425]\n",
-    "# centre[2] = centre[2] + [0, -0.4, -0.7425]\n",
     "\n",
-    "# for i in range(numOfObjects):\n",
-    "#   clusters[i].translate(-centre[i])\n",
     "\n",
-    "# First we will create frames for the objects\n",
-    "sprayBottle = C.addFrame(\"pcl_sprayBottle\")\n",
-    "sprayBottle.setPointCloud(clusters[0].points, [255, 0, 0])\n",
-    "sprayBottle.setPosition(centre[0])\n",
+    "# # First we will create frames for the objects\n",
+    "# sprayBottle = C.addFrame(\"pcl_sprayBottle\")\n",
+    "# sprayBottle.setPointCloud(clusters[0].points, [255, 0, 0])\n",
+    "# sprayBottle.setPosition(centre[0])\n",
     "\n",
-    "rollingPin = C.addFrame(\"pcl_rollingPin\")\n",
-    "rollingPin.setPointCloud(clusters[1].points, [0, 255, 0])\n",
-    "rollingPin.setPosition(centre[1])\n",
+    "# rollingPin = C.addFrame(\"pcl_rollingPin\")\n",
+    "# rollingPin.setPointCloud(clusters[1].points, [0, 255, 0])\n",
+    "# rollingPin.setPosition(centre[1])\n",
     "\n",
-    "soapBox = C.addFrame(\"pcl_soapBox\")\n",
-    "soapBox.setPointCloud(clusters[2].points, [255, 255, 0])\n",
-    "soapBox.setPosition(centre[2])\n",
+    "# soapBox = C.addFrame(\"pcl_soapBox\")\n",
+    "# soapBox.setPointCloud(clusters[2].points, [255, 255, 0])\n",
+    "# soapBox.setPosition(centre[2])\n",
     "\n",
-    "ballAdditional = C.addFrame(\"pcl_ballAdditional\")\n",
-    "ballAdditional.setPointCloud(clusters[3].points, [255, 255, 0])\n",
-    "ballAdditional.setPosition(centre[3])\n",
+    "# ballAdditional = C.addFrame(\"pcl_ballAdditional\")\n",
+    "# ballAdditional.setPointCloud(clusters[3].points, [255, 255, 0])\n",
+    "# ballAdditional.setPosition(centre[3])\n",
     "\n",
     "# C.addFrame(\"vis_soap\", \"pcl_soapBox\").setShape(ry.ST.marker, [1]).setPosition(soapBox.getPosition())\n",
     "C.view()"
@@ -538,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +616,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_40023/2628657640.py:14: RuntimeWarning: invalid value encountered in arccos\n",
+      "/tmp/ipykernel_55312/2628657640.py:14: RuntimeWarning: invalid value encountered in arccos\n",
       "  angle = np.arccos(dot_product)  # Angle in radians\n"
      ]
     },
@@ -718,10 +693,11 @@
     "\n",
     "    print(f\"Best grasp pair for Cluster {i+1}: {best_pair} with distance closest to average {avg_distance}\")\n",
     "    \n",
-    "    # # Visualize the best grasp pair\n",
-    "    # best_pair = np.asarray(best_pair)\n",
-    "    # best_pair = best_pair.reshape(-1, 2)\n",
-    "    # visualize_grasp_pairs(cluster, best_pair)\n"
+    "if want_to_see_best_grasp_for_each_object:\n",
+    "    # Visualize the best grasp pair\n",
+    "    best_pair = np.asarray(best_pair)\n",
+    "    best_pair = best_pair.reshape(-1, 2)\n",
+    "    visualize_grasp_pairs(cluster, best_pair)\n"
    ]
   },
   {
@@ -733,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +718,7 @@
        "0"
       ]
      },
-     "execution_count": 769,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,28 +776,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.007943, evals: 18, done: 1, feasible: 1, sos: 0.040686, f: 0, ineq: 0, eq: 0.00150844 }\n",
-      "{ time: 0.00118, evals: 18, done: 1, feasible: 1, sos: 0.0302137, f: 0, ineq: 0, eq: 0.00121409 }\n",
-      "{ time: 0.00367, evals: 44, done: 1, feasible: 1, sos: 0.0614667, f: 0, ineq: 0, eq: 0.000284192 }\n",
-      "{ time: 0.001019, evals: 17, done: 1, feasible: 1, sos: 0.0252178, f: 0, ineq: 0, eq: 0.000841482 }\n"
+      "{ time: 0.000902, evals: 18, done: 1, feasible: 1, sos: 0.0405865, f: 0, ineq: 0, eq: 0.00149871 }\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 771,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1010,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
