--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "0"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,12 +34,11 @@
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "\n",
     "# some important constants\n",
-    "i_just_want_to_see_the_BotOp_simulation = True\n",
+    "i_just_want_to_see_the_BotOp_simulation = False\n",
     "\n",
     "want_to_see_uncropped_point_cloud = False\n",
     "want_to_see_cropped_point_cloud = not want_to_see_uncropped_point_cloud\n",
     "want_to_see_normals_of_objects = True\n",
-    "want_to_see_separated_clusters = True\n",
     "want_to_see_best_grasp_for_each_object = True\n",
     "  \n",
     "  \n",
@@ -50,7 +49,7 @@
     "degToleration = 6\n",
     "\n",
     "if i_just_want_to_see_the_BotOp_simulation:\n",
-    "  want_to_see_uncropped_point_cloud, want_to_see_cropped_point_cloud, want_to_see_normals_of_objects, want_to_see_separated_clusters, want_to_see_best_grasp_for_each_object = False, False, False, False, False\n",
+    "  want_to_see_uncropped_point_cloud, want_to_see_cropped_point_cloud, want_to_see_normals_of_objects, want_to_see_best_grasp_for_each_object = False, False, False, False\n",
     "\n",
     "\n",
     "C = ry.Config()\n",
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +70,7 @@
        "0"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,16 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
+      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
+      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+     ]
+    }
+   ],
    "source": [
     "bot = ry.BotOp(C, useRealRobot=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -335,9 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=10)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -350,14 +367,6 @@
       "Normals are already estimated.\n",
       "Normal magnitudes (first 10): [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
       "Are normals normalized?  True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  super()._check_params_vs_input(X, default_n_init=10)\n"
      ]
     }
    ],
@@ -406,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +429,11 @@
       "Fixing normals for Cluster 3...\n",
       "Reorienting normals...\n",
       "Fixing normals for Cluster 4...\n",
-      "Reorienting normals...\n"
+      "Reorienting normals...\n",
+      "Visualizing corrected normals for Cluster 1...\n",
+      "Visualizing corrected normals for Cluster 2...\n",
+      "Visualizing corrected normals for Cluster 3...\n",
+      "Visualizing corrected normals for Cluster 4...\n"
      ]
     }
    ],
@@ -452,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +474,7 @@
        "0"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -636,9 +649,13 @@
       "Number of potential grasp pairs in Cluster 4: 4\n",
       "Filtered grasp pairs for Cluster 4: 90\n",
       "Best grasp pair for Cluster 1: (497, 1242) with distance closest to average 0.07315048466477161\n",
+      "Visualizing grasp pairs...\n",
       "Best grasp pair for Cluster 2: (125, 320) with distance closest to average 0.04188608402982608\n",
+      "Visualizing grasp pairs...\n",
       "Best grasp pair for Cluster 3: (60, 199) with distance closest to average 0.05902500893780619\n",
-      "Best grasp pair for Cluster 4: (436, 619) with distance closest to average 0.0480100365511025\n"
+      "Visualizing grasp pairs...\n",
+      "Best grasp pair for Cluster 4: (436, 619) with distance closest to average 0.0480100365511025\n",
+      "Visualizing grasp pairs...\n"
      ]
     }
    ],
@@ -693,11 +710,11 @@
     "\n",
     "    print(f\"Best grasp pair for Cluster {i+1}: {best_pair} with distance closest to average {avg_distance}\")\n",
     "    \n",
-    "if want_to_see_best_grasp_for_each_object:\n",
-    "    # Visualize the best grasp pair\n",
-    "    best_pair = np.asarray(best_pair)\n",
-    "    best_pair = best_pair.reshape(-1, 2)\n",
-    "    visualize_grasp_pairs(cluster, best_pair)\n"
+    "    if want_to_see_best_grasp_for_each_object:\n",
+    "        # Visualize the best grasp pair\n",
+    "        best_pair = np.asarray(best_pair)\n",
+    "        best_pair = best_pair.reshape(-1, 2)\n",
+    "        visualize_grasp_pairs(cluster, best_pair)\n"
    ]
   },
   {
@@ -709,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +735,7 @@
        "0"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +800,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.000902, evals: 18, done: 1, feasible: 1, sos: 0.0405865, f: 0, ineq: 0, eq: 0.00149871 }\n"
+      "{ time: 0.001494, evals: 16, done: 1, feasible: 1, sos: 0.0403701, f: 0, ineq: 0, eq: 0.00371913 }\n",
+      "{ time: 0.000947, evals: 19, done: 1, feasible: 1, sos: 0.0303028, f: 0, ineq: 0, eq: 0.00137044 }\n",
+      "{ time: 0.004772, evals: 37, done: 1, feasible: 1, sos: 0.0615633, f: 0, ineq: 0, eq: 0.000509175 }\n"
      ]
     }
    ],
