--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. Initialisation"
+    "# 0. Initialisation - using ry version: 0.1.10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "0"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
     "\n",
     "\n",
     "C = ry.Config()\n",
-    "C.addFile('/home/vboxuser/Desktop/CS449/Migi/hw3/GFiles-HW3/environment.g')\n",
+    "C.addFile('./GFiles-HW3/environments/environment.g')\n",
     "\n",
     "qHome = C.getJointState()\n",
     "C.view()"
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "37"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,32 +87,23 @@
     "ball.setPosition(ballPos)\n",
     "ball.setMass(0.1)\n",
     "ball.setContact(1)\n",
+    "ball.setColor([0.5,0.75,0])\n",
     "\n",
     "C.view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
-      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
-      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bot = ry.BotOp(C, useRealRobot=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -465,16 +456,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "37"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +620,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_55312/2628657640.py:14: RuntimeWarning: invalid value encountered in arccos\n",
+      "/tmp/ipykernel_62161/2628657640.py:14: RuntimeWarning: invalid value encountered in arccos\n",
       "  angle = np.arccos(dot_product)  # Angle in radians\n"
      ]
     },
@@ -721,21 +712,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.2.2 Now we do the KOMO problem, ig we run all the points and try to get the feasible ones?"
+    "# 1.2.2 Now we do the KOMO problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "37"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,17 +784,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.001494, evals: 16, done: 1, feasible: 1, sos: 0.0403701, f: 0, ineq: 0, eq: 0.00371913 }\n",
-      "{ time: 0.000947, evals: 19, done: 1, feasible: 1, sos: 0.0303028, f: 0, ineq: 0, eq: 0.00137044 }\n",
-      "{ time: 0.004772, evals: 37, done: 1, feasible: 1, sos: 0.0615633, f: 0, ineq: 0, eq: 0.000509175 }\n"
+      "{ time: 0.000915, evals: 16, done: 1, feasible: 1, sos: 0.04023, f: 0, ineq: 0, eq: 0.00373597 }\n",
+      "{ time: 0.000747, evals: 16, done: 1, feasible: 1, sos: 0.0299571, f: 0, ineq: 0, eq: 0.00316298 }\n",
+      "{ time: 0.002097, evals: 47, done: 1, feasible: 1, sos: 0.0612706, f: 0, ineq: 0, eq: 0.000424406 }\n",
+      "{ time: 0.000846, evals: 17, done: 1, feasible: 1, sos: 0.0252509, f: 0, ineq: 0, eq: 0.000844307 }\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -948,75 +950,30 @@
     "  while bot.getTimeToEnd()>0:\n",
     "      bot.sync(C, .1)\n",
     "\n",
-    "  # # now we move back to buffer point\n",
-    "  # try:\n",
-    "  #   del komo\n",
-    "  # except:\n",
-    "  #   pass\n",
-    "  # komo = ry.KOMO(C, 1, 1, 0, False)\n",
-    "  # komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e-1], qHome) #cost: close to qHome\n",
-    "  # komo.addObjective(\n",
-    "  #   times=[], \n",
-    "  #   feature=ry.FS.positionDiff, \n",
-    "  #   frames=['l_gripper', 'buffer_point'], \n",
-    "  #   type=ry.OT.eq, scale=[1e1]\n",
-    "  # )\n",
-    "\n",
-    "  # ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
-    "  # intermediary = komo.getPath()[0]\n",
-    "\n",
-    "  # bot.moveTo(intermediary, timeCost=botOpSpeed)\n",
-    "  # while bot.getTimeToEnd()>0:\n",
-    "  #     bot.sync(C, .1)\n",
-    "  \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
     "C.view()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Now KOMO move to other bin"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
+      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
+      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+     ]
+    }
+   ],
    "source": [
-    "# bot.moveTo(qHome, timeCost=botOpSpeed)\n",
-    "# while bot.getTimeToEnd()>0:\n",
-    "#     bot.sync(C, .1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# speed = 0.1\n",
-    "# C.view()\n",
-    "# qHomeJS = C.getJointState()\n",
-    "# gripper_orig_pos = C.getFrame(\"l_gripper\").getPosition()\n",
-    "# gripper_orig_quat = C.getFrame(\"l_gripper\").getQuaternion()\n",
-    "# print(C.getFrameNames())\n",
-    "\n",
-    "# # initiliase bot and save home position\n",
-    "# bot = ry.BotOp(C, useRealRobot=False)\n",
-    "# qHome = bot.get_qHome()"
+    "try:\n",
+    "  del bot\n",
+    "  del komo\n",
+    "except:\n",
+    "  pass"
    ]
   }
  ],
